--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,6 @@
     <application
             android:icon="@drawable/icon"
             android:label="@string/app_name">
-        <activity android:name=".BaseActivity"/>
+        <activity android:name=".ui.BaseActivity"/>
     </application>
 </manifest>
