--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.overthink.mbtace">
 
-    <uses-sdk android:minSdkVersion="19"/>
+    <uses-sdk android:minSdkVersion="15"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:icon="@drawable/icon"
             android:label="@string/app_name">
         <activity android:name=".ui.BaseActivity"/>
+        <activity android:name=".ui.TripPlannerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
