--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,9 @@
             android:icon="@drawable/icon"
             android:label="@string/app_name">
         <activity android:name=".ui.BaseActivity"/>
-        <activity android:name=".ui.TripPlannerActivity">
+        <activity
+            android:name=".ui.TripPlannerActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
